SigmaCodebackup3rdSep/objects/Product_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Brewery_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brewery Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Catalogs</relationshipLabel>
        <relationshipName>Product_Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catalog_Decscription__c</fullName>
        <label>Catalog Decscription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Current_User__c</fullName>
        <formula>If($User.Account_Id__c = Brewery_Account__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>